--- a/twitterbot/twitterbot/twitterbot.vcxproj.filters
+++ b/twitterbot/twitterbot/twitterbot.vcxproj.filters
@@ -19,4 +19,14 @@
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="include\twitcurl.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Library Include="lib\twitcurl.lib">
+      <Filter>リソース ファイル</Filter>
+    </Library>
+  </ItemGroup>
 </Project>
